Navigation Brand padding on mobile format fixed

--- a/FlightJournal.Web/Content/Site.css
+++ b/FlightJournal.Web/Content/Site.css
@@ -19,11 +19,12 @@ textarea {
 /* Matching the excellent layout from skylines.aero for a cleaner look 50>40px height and gradiant background*/
 .navbar {min-height: 40px;}
 .navbar-brand {height: 40px;}
-.navbar-brand{font-size:16px;font-weight:100;line-height:18px;padding: 6px 15px;}
+.navbar-brand {font-size:16px;font-weight:100;line-height:18px;padding: 6px 15px;}
 .navbar-inverse .navbar-brand {color: #fff;}
 @media(max-width:767px) {
-	.navbar-brand{padding:15px}
-	.dropdown-menu .divider{background-color:#666}
+	.navbar-brand {padding:5px}
+	.navbar-toggle { margin-top: 3px;margin-bottom: 3px}
+	.dropdown-menu .divider {background-color:#666}
 }
 .navbar-nav > li > a {
 	padding-top: 10px !important;
